...
                    NavigationLink(destination: RandomCode().environmentObject(appPrefs)) {
                        Label("Pick a Random Code", systemImage: "shuffle")
                    }

                    NavigationLink(destination: GridView().environmentObject(appPrefs)) {
                        Label("Show many Random Codes", systemImage: "list.bullet.rectangle")
                    }.accessibilityLabel("gridView")
                } header: {
                    Text("Random Picks")
                }

                Section {
                    NavigationLink(destination: Credits()) {
...
