...
                                FavouriteButton(appPrefs: _appPrefs, statusCode: code.rawValue, animalType: appPrefs.animalPreference, textLabel: false).backgroundStyle(.black).padding(.all)
                            }.padding(2)
                        }
                    }
                }
            }
            .accessibilityLabel("gridScroll")
            .onAppear {
                pickRandoms()
            }
            .navigationBarTitle(Text("\(randomsToPick) randoms"))
            .toolbar {
                MemeTypeSelectorToolbar()
...
